--- a/sass/navlinkanim.scss
+++ b/sass/navlinkanim.scss
@@ -6,12 +6,11 @@ $blue-colour: #43aeff;
 // nav element hover effect
 .nav-element {
     position: relative;
-    z-index: 1;
 
     a {
-        -webkit-transition: color 0.3s;
-	    -moz-transition: color 0.3s;
-	    transition: color 0.3s;
+        -webkit-transition: color 0.2s;
+	    -moz-transition: color 0.2s;
+	    transition: color 0.2s;
 
         &::before, &::after {
             position: absolute;
@@ -22,20 +21,25 @@ $blue-colour: #43aeff;
             margin-top: 2px;
             background: #555;
             content: '';
-            z-index: -1;
-            -webkit-transition: 0.3s;
-	        -moz-transition: 0.3s;
-	        transition: 0.3s;
+            -webkit-transition: 0.2s;
+	        -moz-transition: 0.2s;
+	        transition: 0.2s;
             pointer-events: none;
+            opacity: 0;
         }
-
+        
         &:hover, &:focus {
             color: $white-colour;
-
+            
             &::before, &::after {
-                opacity: 0.7;
+                opacity: 1;
                 background: $orange-colour;
                 height: 2px;
+                width: 4px;
+                height: 4px;
+                border-radius: 50%;
+                left: calc(50% - 4px);
+                top: 50%;
             }
 
             &::before {
